--- a/data/hiera_data/tenant_network_type/vlan.yaml
+++ b/data/hiera_data/tenant_network_type/vlan.yaml
@@ -5,6 +5,13 @@ quantum::agents::ovs::bridge_mappings:
 neutron::agents::ovs::bridge_mappings:
   - "physnet1:br-ex"
 neutron::plugins::ovs::network_vlan_ranges: physnet1:1000:2000
+
+neutron::plugins::ml2::network_vlan_ranges:
+  - 'physnet1:1000:2000'
+# ML2 Agent
+neutron::agents::ml2::ovs::bridge_mappings:
+  - "physnet1:br-ex"
+
 quantum::plugins::ovs::tenant_network_type: vlan
 neutron::plugins::ovs::tenant_network_type: vlan
 quantum::agents::ovs::enable_tunneling: false
