--- a/data/scenarios/all_in_one.yaml
+++ b/data/scenarios/all_in_one.yaml
@@ -20,9 +20,13 @@ roles:
       - heat_all
       - "%{db_type}_database"
       - nova_compute
+# For ML2, Uncomment this and comment above line
+#      - nova_compute_ml2
       - cinder_volume
       - ceilometer_compute
       - network_controller
+# For ML2, Uncomment this and comment above line
+#      - network_controller_ml2
       - test_file
   compute:
     classes:
@@ -30,5 +34,7 @@ roles:
       - cinder::setup_test_volume
     class_groups:
       - nova_compute
+# For ML2, Uncomment this and comment above line
+#      - nova_compute_ml2
       - cinder_volume
       - ceilometer_compute
