--- a/data/scenarios/compressed_ha.yaml
+++ b/data/scenarios/compressed_ha.yaml
@@ -30,9 +30,13 @@ roles:
       - heat_all
       - "%{db_type}_database"
       - nova_compute
+# For ML2, Uncomment this and comment above line
+#      - nova_compute_ml2
       - cinder_volume
       - ceilometer_compute
       - provider_network_controller
+# For ML2, Uncomment this and comment above line
+#      - provider_network_controller_ml2
       - test_file
   compressed_ha_cephall:
     classes:
@@ -59,6 +63,8 @@ roles:
       - cinder_volume
       - ceilometer_compute
       - provider_network_controller
+# For ML2, Uncomment this and comment above line
+#      - provider_network_controller_ml2
       - ceph_all
       - test_file
   compressed_ha_cephosd:
@@ -84,9 +90,13 @@ roles:
       - heat_all
       - "%{db_type}_database"
       - nova_compute
+# For ML2, Uncomment this and comment above line
+#      - nova_compute_ml2
       - cinder_volume
       - ceilometer_compute
       - provider_network_controller
+# For ML2, Uncomment this and comment above line
+#      - provider_network_controller_ml2
       - test_file
   compressed_ha_cephmon:
     classes:
@@ -111,9 +121,13 @@ roles:
       - heat_all
       - "%{db_type}_database"
       - nova_compute
+# For ML2, Uncomment this and comment above line
+#      - nova_compute_ml2
       - cinder_volume
       - ceilometer_compute
       - provider_network_controller
+# For ML2, Uncomment this and comment above line
+#      - provider_network_controller_ml2
       - test_file
   compute:
     classes:
@@ -121,6 +135,8 @@ roles:
       - cinder::setup_test_volume
     class_groups:
       - nova_compute
+# For ML2, Uncomment this and comment above line
+#      - nova_compute_ml2
       - cinder_volume
       - ceilometer_compute
   swift_storage:
