Add notifications class to provider class group
Add neutron::server::notifications class to provider network class group
so that Nova <-> Neutron notifications get configured.

Change-Id: I5e39a84ca04558e8650199ad88938a51700c869e
Partial-Bug: #1353671
(cherry picked from commit bdcbc81f5e9344dab7b337ddaf458f4b9b8870e2)

--- a/data/class_groups/provider_network_controller.yaml
+++ b/data/class_groups/provider_network_controller.yaml
@@ -2,3 +2,4 @@ classes:
   - "%{network_service}"
   - "%{network_service}::agents::dhcp"
   - "%{network_service}::agents::%{network_plugin}"
+  - "%{network_service}::server::notifications"
