Include ml2 plugin in provider_network_controller_ml2

--- a/data/class_groups/provider_network_controller_ml2.yaml
+++ b/data/class_groups/provider_network_controller_ml2.yaml
@@ -2,3 +2,4 @@ classes:
   - "%{network_service}"
   - "%{network_service}::agents::dhcp"
   - "%{network_service}::agents::ml2::%{network_plugin}"
+  - "%{network_service}::plugins::ml2"
