Add notifications class to provider class group
Add neutron::server::notifications class to provider network ml2
class group so that Nova <-> Neutron notifications get configured.

Partial-Bug: #1353671

--- a/data/class_groups/provider_network_controller_ml2.yaml
+++ b/data/class_groups/provider_network_controller_ml2.yaml
@@ -3,3 +3,4 @@ classes:
   - "%{network_service}::agents::dhcp"
   - "%{network_service}::agents::ml2::%{network_plugin}"
   - "%{network_service}::plugins::ml2"
+  - "%{network_service}::server::notifications"
